--- a/customerManage.html
+++ b/customerManage.html
@@ -20,11 +20,11 @@
 
                         <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
                             <div class="navbar-nav position ">
-                                <a class="nav-link active" aria-current="page" href="#">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-                                <a class="nav-link active" href="#">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-                                <a class="nav-link active" href="#">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-                                <a class="nav-link active" href="#">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-                                <a class="nav-link active" href="#">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                                <a class="nav-link active" href="customerManage.html">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                                <a class="nav-link active" href="storeManage.html">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                                <a class="nav-link active" href="placeOrderManage.html">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                                <a class="nav-link active" href="index.html">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                                 <a href="#"><img class="profile" src="assets/image/profile.jpg" alt="profile" title="profile"></a>
                             </div>
                         </div>
