--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
                     <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
                         <div class="navbar-nav position ">
-                            <a class="nav-link active" aria-current="page" href="#">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-                            <a class="nav-link active" href="#">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-                            <a class="nav-link active" href="#">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-                            <a class="nav-link active" href="#">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-                            <a class="nav-link active" href="#">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                            <a class="nav-link active" aria-current="page" href="">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                            <a class="nav-link active" href="customerManage.html">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                            <a class="nav-link active" href="storeManage.html">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                            <a class="nav-link active" href="placeOrderManage.html">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                            <a class="nav-link active" href="#about">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                             <a href="#"><img class="profile" src="assets/image/profile.jpg" alt="profile" title="profile"></a>
                         </div>
                     </div>
@@ -330,7 +330,7 @@
         <div class="row margin padding">
             <div id="mainDivF" class="position">
                 <div id="aboutUs" class="col-sm-4 col-xs">
-                    <h1>About Us</h1>
+                    <h1 id="about">About Us</h1>
                 </div>
                 <div id="fDiv1" class="col-sm-4 col-xs">
                     <p>More Link</p>
