--- a/loginPage.html
+++ b/loginPage.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>login page</title>
-    <link rel="stylesheet" href="assets/stylesheet/loginCSSFile.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/stylesheet/loginCSSFile.css">
 </head>
 <body>
-
+    <section>
+        <div>
+            <img class="loginImage" src="assets/image/loginPage.jpg" alt="shop image" title="shop image">
+        </div>
+    </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
