background image design

--- a/loginPage.html
+++ b/loginPage.html
@@ -8,8 +8,15 @@
 </head>
 <body>
     <section>
+        <div class="row">
+            <div id="imageParent" class="col-6">
+                <img class="loginImage" src="assets/image/loginPage.jpg" alt="shop image" title="shop image">
+                <h2 id="text">High Quality Goods</h2>
+            </div>
+        </div>
+
         <div>
-            <img class="loginImage" src="assets/image/loginPage.jpg" alt="shop image" title="shop image">
+
         </div>
     </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
