--- a/loginPage.html
+++ b/loginPage.html
@@ -13,12 +13,14 @@
                 <img class="loginImage" src="assets/image/loginPage.jpg" alt="shop image" title="shop image">
                 <h2 id="text">High Quality Goods</h2>
             </div>
-        </div>
 
-        <div class="row">
             <div class="col-6">
                 <div id="signUpParent">
                     <h4 id="signUp">Sign up</h4>
+                </div>
+
+                <div id="logoParent">
+                    <img id="logo" src="assets/image/logo.png" alt="logo" title="GroStore.lk">
                 </div>
             </div>
         </div>
