--- a/signupPage.html
+++ b/signupPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>login page</title>
+    <title>signup page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/stylesheet/loginCSSFile.css">
     <link rel="stylesheet" href="assets/stylesheet/signupPage.css">
@@ -39,7 +39,7 @@
                 </div>
                 <div class="mb-3 col-10" id="password">
                     <label for=" formGroupExampleInput2" class="form-label">password</label>
-                    <input type="text" class="form-control" id=" formGroupExampleInput2" placeholder="telephone">
+                    <input type="text" class="form-control" id=" formGroupExampleInput2" placeholder="password">
                 </div>
             </div>
 
