--- a/loginPage.html
+++ b/loginPage.html
@@ -16,7 +16,7 @@
         </div>
         <div id="position" class="col-6">
             <div id="signUpParent">
-                <h5 id="signUp">Sign up</h5>
+                <a href="signupPage.html"><h5 id="signUp">Sign up</h5></a>
             </div>
 
             <div id="logoParent">
@@ -37,11 +37,11 @@
             </div>
 
             <div id="forgetPassword">
-                <h6>forget password</h6>
+                <a href="forgetPassword.html"><h6>forget password</h6></a>
             </div>
 
             <div id="loginBtnParent">
-                <button type="button" id="loginBtn" class="btn btn-primary btn-size">Login</button>
+                <a href="index.html"> <button type="button" id="loginBtn" class="btn btn-primary btn-size">Login</button></a>
             </div>
         </div>
 
