--- a/signupPage.html
+++ b/signupPage.html
@@ -17,7 +17,7 @@
         </div>
         <div id="position" class="col-6">
             <div id="signUpParent">
-                <h5 id="signUp">login</h5>
+                <a href="loginPage.html"><h5 id="signUp">login</h5></a>
             </div>
 
             <div id="logoParent">
@@ -44,7 +44,7 @@
             </div>
 
             <div id="loginBtnParent">
-                <button type="button" id="loginBtn" class="btn btn-primary btn-size">Sign up</button>
+                <a href="loginPage.html"><button type="button" id="loginBtn" class="btn btn-primary btn-size">Sign up</button></a>
             </div>
         </div>
 
