--- a/index.html
+++ b/index.html
@@ -27,7 +27,19 @@
                             <a class="nav-link active" href="storeManage.html">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                             <a class="nav-link active" href="placeOrderManage.html">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                             <a class="nav-link active" href="#about">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-                            <a href="#"><img class="profile" src="assets/image/profile.jpg" alt="profile" title="profile"></a>
+
+                            <div id="profileDropdown" class="dropdown">
+                                <img class="profile btn-secondary dropdown-toggle" data-bs-toggle="dropdown" src="assets/image/profile.jpg" alt="profile" title="profile">
+
+                                <ul id="dropdownList" class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                                    <li><img id="dropdownImage" src="assets/image/profile.jpg" class="dropdown-item"></li>
+                                    <li id="" class="textAlignCenter"><a class="dropdown-item logout" href="loginPage.html">Logout</a></li>
+                                    <li><a class="dropdown-item profileDetail">Ramesh Layan</a></li>
+                                    <li><a class="dropdown-item profileDetail">Beruwala</a></li>
+                                    <li><a class="dropdown-item profileDetail">075 798 0223</a></li>
+                                    <li class="textAlignCenter"><a class="dropdown-item signup" href="signupPage.html">Sign Up</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
