--- a/loginPage.html
+++ b/loginPage.html
@@ -37,7 +37,7 @@
             </div>
 
             <div id="forgetPassword">
-                <a href="forgetPassword.html"><h6>forget password</h6></a>
+                <a href="forgetPassword.html"><h6 id="labelForgetPassword">forget password</h6></a>
             </div>
 
             <div id="loginBtnParent">
