--- a/storeManage.html
+++ b/storeManage.html
@@ -7,6 +7,44 @@
     <link rel="stylesheet" href="assets/stylesheet/storeManageCSSFile.css">
     <link rel="stylesheet" href="assets/stylesheet/customerManageCSSFile.css">
     <link rel="stylesheet" href="assets/stylesheet/dashboardCSSFile.css">
+
+    <style>
+
+        /* Styles for Mobile Small (up to 320px) */
+        @media all and (max-width: 320px) {
+
+        }
+
+        /* Styles for Mobile Medium (321px to 375px) */
+        @media all and (min-width: 321px) and (max-width: 375px) {
+
+        }
+
+        /* Styles for Mobile Large (376px to 425px) */
+        @media all and (min-width: 376px) and (max-width: 425px) {
+
+        }
+
+        /* Styles for Tablet (426px to 768px) */
+        @media all and (min-width: 426px) and (max-width: 768px) {
+
+        }
+
+        /* Styles for Laptop (769px to 1024px) */
+        @media all and (min-width: 769px) and (max-width: 1024px) {
+
+        }
+
+        /* Styles for Laptop Large (1025px to 1366px) */
+        @media all and (min-width: 1025px) and (max-width: 1366px) {
+
+        }
+        /* Styles for Laptop Large (1367px to 1440px) */
+        @media all and (min-width: 1367px) and (max-width: 1440px) {
+
+        }
+    </style>
+
 </head>
 <body>
 <section>
