--- a/storeManage.html
+++ b/storeManage.html
@@ -49,22 +49,34 @@
 <body>
 <section>
     <header id="header">
-        <nav class="padding navbar shadow p-3 mb-5 bg-body-tertiary rounded margin" style="background-color: #ffffff;">
+        <nav class="navbar shadow p-3 mb-5 bg-body-tertiary rounded padding" style="background-color: #ffffff;">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">GroStore</a>
+                    <a id="GroStore" class="navbar-brand" href="#">GroStore</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
                     <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
                         <div class="navbar-nav position ">
-                            <a class="nav-link active" aria-current="page" href="index.html">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                            <a class="nav-link active" aria-current="page" href="">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                             <a class="nav-link active" href="customerManage.html">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                             <a class="nav-link active" href="storeManage.html">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                             <a class="nav-link active" href="placeOrderManage.html">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-                            <a class="nav-link active" href="index.html">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-                            <a href="#"><img class="profile" src="assets/image/profile.jpg" alt="profile" title="profile"></a>
+                            <a class="nav-link active" href="#about">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+
+                            <div id="profileDropdown" class="dropdown">
+                                <img class="profile btn-secondary dropdown-toggle" data-bs-toggle="dropdown" src="assets/image/profile.jpg" alt="profile" title="profile">
+
+                                <ul id="dropdownList" class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                                    <li><img id="dropdownImage" src="assets/image/profile.jpg" class="dropdown-item"></li>
+                                    <li id="" class="textAlignCenter"><a class="dropdown-item logout" href="loginPage.html">Logout</a></li>
+                                    <li><a class="dropdown-item profileDetail">Ramesh Layan</a></li>
+                                    <li><a class="dropdown-item profileDetail">Beruwala</a></li>
+                                    <li><a class="dropdown-item profileDetail">075 798 0223</a></li>
+                                    <li class="textAlignCenter"><a class="dropdown-item signup" href="signupPage.html">Sign Up</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
