--- a/customerManage.html
+++ b/customerManage.html
@@ -35,6 +35,71 @@
 
         /* Styles for Laptop Large (1025px to 1366px) */
         @media all and (min-width: 1025px) and (max-width: 1366px) {
+
+            /*header*/
+            /*  header profile image  */
+            .profile{
+                width: 78px;
+                height: 75px;
+
+                border-radius: 100%;
+                margin: 0;
+                padding: 0;
+
+                position: relative;
+                top: -15px;
+                left: 10.6rem;
+            }
+
+            #dropdownList{
+                width: 248px;
+                height: 400px;
+                margin: 0;
+            }
+
+            .profileDetail{
+                -webkit-text-fill-color: gray;
+                position: relative;
+                left: 60px;
+                width: fit-content;
+            }
+
+            .position{
+                position: relative;
+                left: 1rem;
+                font-size: 19px;
+            }
+
+            #GroStore{
+                font-size: 24px;
+                -webkit-text-fill-color: purple;
+                font-weight: bold;
+            }
+
+            #profileDropdown{
+                width: 75px;
+                position: relative;
+                left: 62px;
+            }
+
+            .signup{
+                -webkit-text-fill-color: #0066FF;
+                margin-top: 20px;
+            }
+
+            .logout{
+                text-align: center;
+                -webkit-text-fill-color: #590067;
+                font-weight: bold;
+
+                margin-bottom: 20px;
+            }
+
+            .textAlignCenter{
+                text-align: center;
+            }
+
+            /*--------------------------------------------------------------------------------------------*/
             .newButton{
                 background-color: #03A100;
                 margin-right: 15px;
